INitial heroku commit

--- a/app/view/project-detail.component.html
+++ b/app/view/project-detail.component.html
@@ -24,19 +24,19 @@
 		</div>
 		<div>
 			<label>GitUrl:</label>
-			<p>{{project.git_url}}</p>
+			<p>{{project.gitUrl}}</p>
 		</div>
 		<div>
 			<label>Stash ID:</label>
-			<p>{{project.stash_id}}</p>
+			<p>{{project.stashId}}</p>
 		</div>
 		<div>
 			<label>Resource path:</label>
-			<p>{{project.path_to_resources}}</p>
+			<p>{{project.pathToResources}}</p>
 		</div>
 		<div>
 			<label>Resource prefix: </label>
-			<p>{{project.resource_prefix}}</p>
+			<p>{{project.resourcePrefix}}</p>
 		</div>
 		<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUFV0KKB7RflIAz5hX0N2V2BURxTlLuQ8J7pBD2lS7zwkWeYaZWKHQdz4"/>
 	</div>
