--- a/app/view/project-edit.component.html
+++ b/app/view/project-edit.component.html
@@ -16,19 +16,19 @@
 				</div>
 				<div class="form-group">
 					<label for="name">GIT URL: </label>
-					<input class="form-control" type="text" name="git_url" id="name" [(ngModel)]="model.git_url" />
+					<input class="form-control" type="text" name="git_url" id="git_url" [(ngModel)]="model.gitUrl" />
 				</div>
 				<div class="form-group">
 					<label for="name">Stash ID: </label>
-					<input class="form-control" type="text" name="stash_id" id="name" [(ngModel)]="model.stash_id" />
+					<input class="form-control" type="text" name="stash_id" id="stash_id" [(ngModel)]="model.stashId" />
 				</div>
 				<div class="form-group">
 					<label for="name">Path to resources: </label>
-					<input class="form-control" type="text" name="path_to_resources" id="name" [(ngModel)]="model.path_to_resources" />
+					<input class="form-control" type="text" name="path_to_resources" id="path_to_resources" [(ngModel)]="model.pathToResources" />
 				</div>
 				<div class="form-group">
 					<label for="name">Resource prefix: </label>
-					<input class="form-control" type="text" name="resource_prefix" id="resource_prefix" [(ngModel)]="model.resource_prefix" />
+					<input class="form-control" type="text" name="resource_prefix" id="resource_prefix" [(ngModel)]="model.resourcePrefix" />
 				</div>
 				<div class="form-group">
 					<label for="name">Convert name: </label>
