Support for logging in

--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 </nav>
-<sign-in-modal [showModal]="showSignInModal"></sign-in-modal>
-<div class="container-fluid" [ngClass]="{'transient':showSignInModal}">
+
+<div class="container-fluid">
 	<router-outlet></router-outlet>
 </div>
