--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -5,7 +5,7 @@
 				{{title}}
 			</p>
 			<ul class="nav navbar-nav navbar-right">
-				<li>
+				<li class="greet-user">
 					Hello, {{ loggedUser ? loggedUser.name : ''}}
 				</li>
 			</ul>
