--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -8,6 +8,9 @@
 				<li class="greet-user">
 					Hello, {{ loggedUser ? loggedUser.name : ''}}
 				</li>
+				<button class="btn btn-primary" type="button" (click)="logout()">
+					Logout
+				</button>
 			</ul>
 		</div>
 	</div>
