--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<p class="page-heading">
-				{{ !loggedUser ? title: ''}}
+			<p *ngIf="!loggedUser" class="page-heading">
+				title
 			</p>
-			<ul class="nav navbar-nav navbar-right">
+			<ul *ngIf="loggedUser" class="nav navbar-nav navbar-right">
 				<li class="greet-user">
-					{{ loggedUser ?  'Hello ' + loggedUser.name : ''}}
+					{{ 'Hello ' + loggedUser.name}}
 				</li>
-				<button class="btn btn-primary" type="button" (click)="logout()">
-					{{ loggedUser ? 'Logout' : '' }}
+				<button  class="btn btn-primary" type="button" (click)="logout()">
+					Logout
 				</button>
 			</ul>
 		</div>
