--- a/app/view/login.component.html
+++ b/app/view/login.component.html
@@ -1,6 +1,13 @@
-<div class="box-gmail" (click)="googleLogin()">
-    <img src="http://nikosete.com/img/gmail.jpg" />
-    <p>
-        Sign in using Google
-    </p>
+<div class="login-page">
+    <div class="left">
+        <p class="sign-in-info">Please sign in to continue.</p>
+        <div class="box-gmail" (click)="googleLogin()">
+            <img src="./app/images/btn_google_light_normal_ios.svg" class="google-img"/>
+            <p class="sign-with-google-paragraph">Sign in with Google</p>
+        </div>
+    </div>
+    <div class="right">
+
+    </div>
+
 </div>
