--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -2,11 +2,17 @@
 	<div class="container-fluid">
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<p *ngIf="!loggedUser" class="page-heading">
-				title
+				{{title}}
 			</p>
+			<ul *ngIf="loggedUser" class="nav navbar-nav navbar-left">
+				<li>
+					Projects
+				</li>
+			</ul>
 			<ul *ngIf="loggedUser" class="nav navbar-nav navbar-right">
+
 				<li class="greet-user">
-					{{ 'Hello ' + loggedUser.name}}
+					{{ loggedUser.name}}
 				</li>
 				<button  class="btn btn-primary" type="button" (click)="logout()">
 					Logout
@@ -16,6 +22,6 @@
 	</div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid" [ngClass]="{'login-container': !isLoggedUser}">
 	<router-outlet></router-outlet>
 </div>
