Adding convert format

--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-inverse">
-	<div class="container-fluid">
+	<div class="container">
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<p *ngIf="!loggedUser" class="page-heading">
 				{{title}}
