--- a/app/view/project-list.component.html
+++ b/app/view/project-list.component.html
@@ -11,7 +11,7 @@
 			</button>
 		</div>
 	</div>
-<table [ngClass]="{'transient':showSignInModal}" class="table table-bordered table-striped">
+<table  class="table table-bordered table-striped">
 	<tr>
 		<th>
 			Project name
