--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -8,7 +8,7 @@
 				<li (click)="goToProjects()">
 					Projects
 				</li>
-				<li ()="goToConverters()">
+				<li (click)="goToConverters()">
 					Converters
 				</li>
 				<li>
