--- a/app/view/project-detail.component.html
+++ b/app/view/project-detail.component.html
@@ -4,6 +4,10 @@
 <button class="btn btn-success" (click)="edit()">
 	Edit
 </button>
+
+<button class="btn btn-danger" (click)="delete()">
+	Delete
+</button>
 <div *ngIf="project" class="panel panel-default">
 	<div class="panel-body">
 		<div>
