--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -11,8 +11,8 @@
 				<li (click)="goToConverters()">
 					Converters
 				</li>
-				<li>
-					Teams
+				<li (click)="goToUsers()">
+					Users
 				</li>
 			</ul>
 			<ul *ngIf="loggedUser" class="nav navbar-nav navbar-right">
