--- a/app/view/project-add.component.html
+++ b/app/view/project-add.component.html
@@ -8,40 +8,51 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-6">
 			<form *ngIf="model">
 				<div class="form-group">
 					<label for="name">Project name: </label>
 					<input class="form-control" type="text" name="name" id="name" [(ngModel)]="model.name" />
 				</div>
 				<div class="form-group">
-					<label for="name">GIT URL: </label>
-					<input class="form-control" type="text" name="git_url" id="git_url" [(ngModel)]="model.gitUrl" />
+					<label for="git">GIT URL: </label>
+					<input class="form-control" type="text" name="git" id="git" [(ngModel)]="model.git" />
 				</div>
 				<div class="form-group">
-					<label for="name">Stash ID: </label>
-					<input class="form-control" type="text" name="stash_id" id="stash_id" [(ngModel)]="model.stashId" />
+					<label for="project_key">Project key: </label>
+					<input class="form-control" type="text" name="project_key" id="project_key" [(ngModel)]="model.projectKey" />
 				</div>
 				<div class="form-group">
-					<label for="name">Path to resources: </label>
-					<input class="form-control" type="text" name="path_to_resources" id="path_to_resources" [(ngModel)]="model.pathToResources" />
+					<label for="resource_path">Path to resources: </label>
+					<input class="form-control" type="text" name="resource_path" id="resource_path" [(ngModel)]="model.resourcePath" />
 				</div>
 				<div class="form-group">
-					<label for="name">Resource prefix: </label>
-					<input class="form-control" type="text" name="resource_prefix" id="resource_prefix" [(ngModel)]="model.resourcePrefix" />
+					<label for="tmpBranchesInput">Enter branches for project:</label>
+					<div class="input-group">
+						<input class="form-control" type="text" name="tmpBranchesInput" id="tmpBranchesInput" [(ngModel)]="tmpBranchesInput" />
+						<span class="input-group-btn">
+							<button class="btn btn-primary" (click)="addBranch()">
+								<i class="fa fa-plus"></i>Add
+							</button>
+						</span>
+					</div>
+					<div class="project-branch" *ngFor="let branch of model.branches; let i = index">
+						{{branch}}
+						<i class="glyphicon glyphicon-remove" (click)="removeBranch(i)"></i>
+					</div>
 				</div>
+
 				<div class="form-group">
-					<label for="sel1">Select format used by developers:</label>
-					<select class="form-control" id="sel1">
-						<option *ngFor="let item of formats" value="item.id">{{item.name}}</option>
+					<label for="assigneeSelect">
+						Select assignee:
+					</label>
+					<select class="form-control" id="assigneeSelect" #selectValue (change)="onAssigneeSelected(selectValue.value)">
+						<option *ngFor="let user of assignableUsers" [value]="user.id">
+							{{user.name}}
+						</option>
 					</select>
 				</div>
-<!--
-				<div class="form-group">
-					<label for="name">Convert name: </label>
-					<input class="form-control" type="text" name="converter_name" id="converter_name" [(ngModel)]="model.converter.name" />
-				</div>
-			-->
+
 				<div class="form-group">
 					<button type="button" class="btn btn-primary" (click)="addProject()">Submit</button>
 				</div>
