--- a/app/view/project-add.component.html
+++ b/app/view/project-add.component.html
@@ -32,7 +32,7 @@
 						<input class="form-control" type="text" name="tmpBranchesInput" id="tmpBranchesInput" [(ngModel)]="tmpBranchesInput" />
 						<span class="input-group-btn">
 							<button class="btn btn-primary" (click)="addBranch()">
-								<i class="fa fa-plus"></i>Add
+								<i class="fa fa-plus"></i>
 							</button>
 						</span>
 					</div>
