--- a/app/view/project-detail.component.html
+++ b/app/view/project-detail.component.html
@@ -11,8 +11,12 @@
 <div *ngIf="project" class="panel panel-default">
 	<div class="panel-body">
 		<div>
-			<label>Project Id:</label>
+			<label>Database Id:</label>
 			<p>{{project.id}}</p>
+		</div>
+		<div>
+			<label>Project Id:</label>
+			<p>{{project.hashMapIdentifier}}</p>
 		</div>
 		<div>
 			<label>Project name:</label>
