--- a/app/view/login.component.html
+++ b/app/view/login.component.html
@@ -1,13 +1,16 @@
 <div class="login-page">
-    <div class="left">
-        <p class="sign-in-info">Please sign in to continue.</p>
-        <div class="box-gmail" (click)="googleLogin()">
-            <img src="./app/images/btn_google_light_normal_ios.svg" class="google-img"/>
-            <p class="sign-with-google-paragraph">Sign in with Google</p>
+    <div class="sign-in-wrapper">
+
+        <div class="sign-in-box">
+            <p class="sign-in-info">Please sign in to continue.</p>
+            <div class="box-gmail" (click)="googleLogin()">
+                <img src="./app/images/btn_google_light_normal_ios.svg" class="google-img"/>
+                <p class="sign-with-google-paragraph">Sign in with Google</p>
+            </div>
         </div>
-    </div>
-    <div class="right">
 
     </div>
-
+    <div class="backstretch">
+        <img src="../../app/images/translate-background.jpg" />
+    </div>
 </div>
