--- a/app/view/project-edit.component.html
+++ b/app/view/project-edit.component.html
@@ -15,6 +15,10 @@
 					<input class="form-control" type="text" name="name" id="name" [(ngModel)]="model.name" />
 				</div>
 				<div class="form-group">
+					<label for="hashMapIdentifier">Project ID: </label>
+					<input class="form-control" type="text" name="hashMapIdentifier" id="hashMapIdentifier" [(ngModel)]="model.hashMapIdentifier" />
+				</div>
+				<div class="form-group">
 					<label for="git">GIT URL: </label>
 					<input class="form-control" type="text" name="git" id="git" [(ngModel)]="model.git" />
 				</div>
