--- a/styles.css
+++ b/styles.css
@@ -59,26 +59,6 @@ tr {
 	transition: border 200ms;
 }
 
-.nav.navbar-nav li {
-	color: #555;
-	padding: 10px;
-	font-size: 16px;
-}
-
-.box-gmail{
-	text-align: center;
-	color: #000;
-	cursor: pointer;
-
-	position: absolute;
-	height: 50px;
-	left: calc(23% - 100px/2); /* width divided by 2*/
-	border: 2px solid white;
-	background-color: #ffffff;
-	width: 300px;
-	border: 1px solid #cccccc;
-}
-
 .login-container {
 	width: 100%;
 	height: 100%;
@@ -100,17 +80,6 @@ tr {
 .login-page {
 	width:100%;
 	height:100%;
-}
-
-.google-img {
-	width: 46px;
-	height: 46px;
-	float: left;
-}
-
-.sign-with-google-paragraph {
-	text-align: center;
-	padding-top: 13px;
 }
 
 .left {
@@ -138,10 +107,132 @@ tr {
 	 text-align: center;
  }
 
- .navbar-left li {
-	 border: 1px solid #666;
-	 cursor: pointer;
- }
+.nav.navbar-nav li {
+	color: #000;
+	padding: 10px;
+	font-size: 16px;
+}
 
-.navbar-left li:hover {
+.nav.navbar-nav li a.active {
+	background-color: #3c80c7;
+	color: white;
+}
+
+.nav.navbar-nav li a:not(.active) {
+	color: black;
+
+}
+
+.nav.navbar-nav.navbar-right button {
+	margin-top: 10px;
+}
+
+.nav.navbar-nav.navbar-right li {
+	margin-top: 10px;
+}
+
+@media screen and (max-width: 767px) {
+	.nav.navbar-nav.navbar-right button {
+		width: 100%;
+	}
+
+	.nav.navbar-nav.navbar-right ul {
+		width: 100%;
+	}
+
+	.nav.navbar-nav.navbar-right li {
+		text-align: center;
+	}
+
+	.nav.navbar-nav.navbar-left li {
+		text-align: center;
+	}
+
+	.navbar-inverse .navbar-toggle.collapsed {
+		background-color: #333;
+	}
+}
+
+/*************************************************************************/
+/***************************LOGIN STYLES**********************************/
+/*************************************************************************/
+
+.box-gmail{
+	text-align: center;
+	color: #fff;
+	cursor: pointer;
+
+	height: 50px;
+	background-color: #ffffff;
+	width: 300px;
+	border: 1px solid #cccccc;
+	margin: auto;
+}
+
+.login-container {
+	width: 100%;
+	height: 100%;
+	padding: 0;
+}
+
+.login-navbar {
+	margin: 0;
+	padding: 0;
+}
+
+.sign-in-info {
+	text-align: center;
+	color: #000;
+	font-size: 32px;
+	padding: 30px;
+}
+
+.login-page {
+	width:100%;
+	height:100%;
+}
+
+.google-img {
+	width: 46px;
+	height: 46px;
+	float: left;
+}
+
+.sign-with-google-paragraph {
+	text-align: center;
+	padding-top: 13px;
+	color: #000;
+}
+
+.sign-in-wrapper {
+	width: 100%;
+	float: left;
+	border-right: 5px solid black;
+	height: 100%;
+}
+
+.backstretch {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: -10;
+}
+
+.backstretch img {
+	height: 100%;
+	width: 100%;
+	z-index: -10;
+	opacity: 0.95;
+}
+
+.sign-in-box {
+	width: 600px;
+	text-align: center;
+	margin: auto;
+	background-color: #fff;
+	height: 200px;
+	margin-top: 60px;
+	border: 3px solid #000;
 }
