--- a/styles.css
+++ b/styles.css
@@ -70,12 +70,7 @@ tr {
 	padding: 0;
 }
 
-.sign-in-info {
-	text-align: center;
-	color: #fff;
-	font-size: 32px;
-	padding: 30px;
-}
+
 
 .login-page {
 	width:100%;
@@ -153,86 +148,20 @@ tr {
 	}
 }
 
-/*************************************************************************/
-/***************************LOGIN STYLES**********************************/
-/*************************************************************************/
 
-.box-gmail{
-	text-align: center;
-	color: #fff;
-	cursor: pointer;
-
-	height: 50px;
-	background-color: #ffffff;
-	width: 300px;
-	border: 1px solid #cccccc;
-	margin: auto;
-}
-
-.login-container {
-	width: 100%;
+.backstretch-loading img {
 	height: 100%;
-	padding: 0;
-}
-
-.login-navbar {
-	margin: 0;
-	padding: 0;
-}
-
-.sign-in-info {
-	text-align: center;
-	color: #000;
-	font-size: 32px;
-	padding: 30px;
-}
-
-.login-page {
-	width:100%;
-	height:100%;
-}
-
-.google-img {
-	width: 46px;
-	height: 46px;
-	float: left;
-}
-
-.sign-with-google-paragraph {
-	text-align: center;
-	padding-top: 13px;
-	color: #000;
-}
-
-.sign-in-wrapper {
-	width: 100%;
-	float: left;
-	border-right: 5px solid black;
-	height: 100%;
-}
-
-.backstretch {
-	position: fixed;
-	top: 0;
-	left: 0;
 	width: 100vw;
-	height: 100vh;
 	z-index: -10;
+	opacity: 0.3;
 }
 
-.backstretch img {
-	height: 100%;
-	width: 100%;
-	z-index: -10;
-	opacity: 0.95;
-}
-
-.sign-in-box {
-	width: 600px;
+.loading-spinner-wrapper {
+	position: fixed;
+	color: #000;
+	top: 40%;
 	text-align: center;
-	margin: auto;
-	background-color: #fff;
-	height: 200px;
-	margin-top: 60px;
-	border: 3px solid #000;
+	font-size: 24px;
+	vertical-align: middle;
 }
+
