--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -46,6 +46,6 @@
 	</div>
 </nav>
 
-<div class="container-fluid" [ngClass]="{'login-container': !isLoggedUser}">
+<div class="container" [ngClass]="{'login-container': !isLoggedUser}">
 	<router-outlet></router-outlet>
 </div>
