--- a/app/view/login.component.html
+++ b/app/view/login.component.html
@@ -11,4 +11,10 @@
     <div class="backstretch">
         <img src="../../app/images/bigimg.jpg" />
     </div>
+
+    <!--
+    <script>
+        $.backstretch("http://localhost:3000/app/images/bigimg.jpg");
+    </script>
+    -->
 </div>
