--- a/app/styles/login.component.css
+++ b/app/styles/login.component.css
@@ -33,8 +33,10 @@
 
 .backstretch img {
     height: 100%;
-    width: 100%;
+    background-size: cover;
     z-index: -10;
     opacity: 0.95;
+    position: absolute;
+    left: -300px;
 }
 
